--- a/css/components/container.css
+++ b/css/components/container.css
@@ -1,6 +1,6 @@
 .container {
 	width:700px;
-	margin:0 auto;
+	margin:80px auto;
  }
 
  @media (max-width: 960px) {
@@ -18,6 +18,10 @@
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
-    width: 300px;
+    width: 350px;
   }
+}
+
+.main-content {
+  margin-top: 50px;
 }
